# tabby

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  pixi.toml  pyproject.toml  test.py
cpp/: array.h  pybind11_module.cpp
cpp/include/: array.h  chunked_array.h  csv.h  data_frame.h  data_type.h  schema.h  series.h  thread_pool.h  types.h
cpp/src/: chunked_array.cpp  csv.cpp  dataframe.cpp  main.cpp  tabby.cpp
tabby/: Grammar.py  __init__.py  dag.py  dataframe.py  expr.py  input.py  op.py  token.py  tokentype.py
test/: pandas_example.py  testbench.py
tests/: test_dag.py  test_query_building.py
tests/manual/: dag_visualization.py  sample1.py
tools/: tabby-ui.py
